<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginNetflixActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/netflix_logo_height"
        android:src="@drawable/ic_logo_netflix"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical_4"/>

    <TextView
        android:text="@string/txt_sign_in_netflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_email"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintBottom_toTopOf="@id/cv_password">

        <EditText
            android:hint="@string/hint_email_or_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintBottom_toTopOf="@id/gl_center">

        <EditText
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_in_netflix"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:backgroundTint="@android:color/holo_red_light"
        android:paddingVertical="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/gl_center"/>

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"/>

    <TextView
        android:id="@+id/txt_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/txt_remember_me"
        app:layout_constraintStart_toEndOf="@id/cb_remember"
        app:layout_constraintTop_toTopOf="@id/cb_remember"
        app:layout_constraintBottom_toBottomOf="@id/cb_remember"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/txt_need_help"
        android:layout_marginEnd="@dimen/margin_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_remember"
        app:layout_constraintBottom_toBottomOf="@id/txt_remember"
        />

</androidx.constraintlayout.widget.ConstraintLayout>